init command implementation